# private_rag_apps

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_chunks_content_bigm.py  0003_chat_history.py  0004_drive_source_fields.py
backend/docker/api/: Dockerfile.local
backend/docker/db/: Dockerfile.local
backend/docker/ingest_worker/: Dockerfile.local
backend/evals/: analyze_score_distribution.py  analyze_theta_high.py  calibrate_threshold.py  direct_groundedness_eval.py  generate_dataset.py  generate_routing_dataset.py  recalibrate_theta.py  supplement_format_eval.py
backend/evals/baselines/: current.json
backend/evals/cache/: m3_retrieval.json
backend/evals/dataset/: direct_groundedness_results.jsonl  m3_golden.jsonl  routing-README.md  routing.jsonl  routing_eval_results.jsonl  routing_rewrite_cache.jsonl  routing_scores.jsonl  supplement_format_results_attempt1.jsonl  supplement_format_results_attempt2.jsonl
backend/evals/golden/: m0.yaml
backend/evals/reports/: m7-calibration-result.json  m7-direct-groundedness.md  (+8 more)
backend/tests/: conftest.py  test_api.py  test_basic.py  test_chat.py  test_chat_sse_structure.py  test_cli.py  test_config.py  test_eval_metrics.py  test_graph_builder.py  test_graph_nodes.py  test_graph_state.py  test_ingest_api.py  test_ingest_gdrive_api.py  test_ingestion_concurrency.py  test_ingestion_diff.py  test_ingestion_gdrive_client.py  test_ingestion_gdrive_loader.py  test_ingestion_indexer.py  test_ingestion_indexer_gdrive.py  test_migration_drive_source_fields.py  test_retrieval.py  test_worker_gdrive_integration.py  test_worker_tasks.py
(+139 files in other folders)
