[project]
name = "private_rag_apps"
version = "0.1.0"
description = "Private RAG Apps Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "pgvector>=0.3.1",
    "alembic>=1.13.2",
    "openai>=2.0.0",
    "voyageai>=0.2.3",
    "langfuse>=2.38.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "sse-starlette>=3.4.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
